Add svgs, styles for the lines

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,14 @@
 <body>
     <h1>i ching hexagram generator</h1>
     <button id="generateHexagram">generate hexagram</button>
-    <div id="originalHexagram"></div>
-    <div id="transformedHexagram"></div>
+    <div id="originalHexagram">
+        <div id="originalLines"></div>
+        <div id="originalText"></div>
+    </div>
+    <div id="transformedHexagram">
+        <div id="transformedLines"></div>
+        <div id="transformedText"></div>
+    </div>
 
     
 </body>
