Fix tooltip display of individual line meanings

--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>i ching</title>
+    <title>i ching ☯️</title>
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>i ching hexagram generator</h1>
+    <h1 id="header">i ching hexagram generator</h1>
     <button id="generateHexagram">generate hexagram</button>
     
     <div id="hexagramsContainer">
-        <div id="originalHexagram">
+        <div id="originalHexagram" class="hexagram">
             <div id="originalLines"></div>
             <div id="originalText"></div>
         </div>
-        <div id="transformedHexagram">
+        <div id="transformedHexagram"class="hexagram">
             <div id="transformedLines"></div>
             <div id="transformedText"></div>
         </div>
