Fix hexagram rendering: lines fade in concurrently

--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="header">i ching hexagram generator</h1>
-    <button id="generateHexagram">generate hexagram</button>
-    
+    <div id="headerContainer">
+        <h1 id="header">i ching hexagram generator</h1>
+        <button id="generateHexagram">generate hexagram</button>
+    </div>
+
     <div id="hexagramsContainer">
         <div id="originalHexagram" class="hexagram">
-            <div id="originalLines"></div>
+            <div id="originalLines">
+
+            </div>
             <div id="originalText"></div>
         </div>
         <div id="transformedHexagram"class="hexagram">
-            <div id="transformedLines"></div>
+            <div id="transformedLines">
+
+            </div>
             <div id="transformedText"></div>
         </div>
     </div>
